@@ -542,7 +542,6 @@ rpmlog(RPMLOG_DEBUG, D_("   Comparing compat archs %s ? %s\n"), arch, t);
 int rpmtsAddInstallElement(rpmts ts, Header h,
 			fnpyKey key, int upgrade, rpmRelocation relocs)
 {
-    static const char msg[] = "rpmtsAddInstallElement";
     HE_t he = memset(alloca(sizeof(*he)), 0, sizeof(*he));
     rpmdepFlags depFlags = rpmtsDFlags(ts);
     rpmuint32_t tscolor = rpmtsColor(ts);
@@ -702,7 +701,7 @@ assert(he->p.str != NULL);
 	    break;
 	}
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
     oldChk = rpmdsFree(oldChk);
     newChk = rpmdsFree(newChk);
 
@@ -802,7 +801,7 @@ fprintf(stderr, "*** %s: %d in %s\n", rpmteNEVRA(p), rpmdbCount(rpmtsGetRdb(ts),
 exit:
     arch = _free(arch);
     os = _free(os);
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
     return ec;
 }
 
@@ -2088,7 +2087,6 @@ static inline int addRelation(rpmts ts,
 	/*@modifies ts, p, *selected, rpmGlobalMacroContext,
 		fileSystem, internalState @*/
 {
-    static const char msg[] = "addRelation";
     rpmtsi qi; rpmte q;
     tsortInfo tsi;
     nsType NSType = rpmdsNSType(requires);
@@ -2141,7 +2139,7 @@ static inline int addRelation(rpmts ts,
 	if (pkgKey == rpmteAddedKey(q))
 	    break;
     }
-    qi = rpmtsiFree(qi, msg);
+    qi = rpmtsiFree(qi);
     if (q == NULL || i >= ts->orderCount)
 	return 0;
 
@@ -2289,7 +2287,6 @@ static int countSlashes(const char * dn)
 
 int rpmtsOrder(rpmts ts)
 {
-    static const char msg[] = "rpmtsOrder";
     rpmds requires;
     rpmuint32_t Flags;
     int anaconda = rpmtsDFlags(ts) & RPMDEPS_FLAG_ANACONDA;
@@ -2341,7 +2338,7 @@ int rpmtsOrder(rpmts ts)
 	pkgKey = (alKey)(((long)pkgKey) + ts->numAddedPackages);
 	(void) rpmteSetAddedKey(p, pkgKey);
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
     rpmalMakeIndex(ts->erasedPackages);
 
     (void) rpmswEnter(rpmtsOp(ts, RPMTS_OP_ORDER), 0);
@@ -2363,7 +2360,7 @@ int rpmtsOrder(rpmts ts)
     pi = rpmtsiInit(ts);
     while ((p = rpmtsiNext(pi, oType)) != NULL)
 	rpmteNewTSI(p);
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
 
     /* Record all relations. */
     rpmlog(RPMLOG_DEBUG, D_("========== recording tsort relations\n"));
@@ -2449,7 +2446,7 @@ int rpmtsOrder(rpmts ts)
 		p->type = TR_REMOVED;
 	    }
 	}
-	qi = rpmtsiFree(qi, msg);
+	qi = rpmtsiFree(qi);
       }
 
       {
@@ -2480,7 +2477,7 @@ int rpmtsOrder(rpmts ts)
       }
 
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
 
     /* Save predecessor count and mark tree roots. */
     treex = 0;
@@ -2504,14 +2501,14 @@ int rpmtsOrder(rpmts ts)
 #endif
 
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
     ts->ntrees = treex;
 
     /* T4. Scan for zeroes. */
     rpmlog(RPMLOG_DEBUG, D_("========== tsorting packages (order, #predecessors, #succesors, tree, Ldepth, Rbreadth)\n"));
 
 rescan:
-    if (pi != NULL) pi = rpmtsiFree(pi, msg);
+    if (pi != NULL) pi = rpmtsiFree(pi);
     q = r = NULL;
     qlen = 0;
     pi = rpmtsiInit(ts);
@@ -2527,7 +2524,7 @@ rescan:
 	addQ(p, &q, &r, prefcolor);
 	qlen++;
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
 
     /* T5. Output front of queue (T7. Remove from queue.) */
     for (; q != NULL; q = rpmteTSI(q)->tsi_suc) {
@@ -2611,7 +2608,7 @@ rescan:
 		tsi->tsi_suc = p;
 		tsi = rpmteTSI(p);
 	    }
-	    pi = rpmtsiFree(pi, msg);
+	    pi = rpmtsiFree(pi);
 	    tsi->tsi_suc = NULL;
 	}
     }
@@ -2630,7 +2627,7 @@ rescan:
 	    if (rpmteTSI(q)->tsi_count == 0)
 		rpmteTSI(q)->tsi_count = -1;
 	}
-	qi = rpmtsiFree(qi, msg);
+	qi = rpmtsiFree(qi);
 
 	/* T10. Mark all packages with their predecessors. */
 	qi = rpmtsiInit(ts);
@@ -2641,7 +2638,7 @@ rescan:
 	    markLoop(tsi, q);
 	    rpmteTSI(q)->tsi_next = tsi;
 	}
-	qi = rpmtsiFree(qi, msg);
+	qi = rpmtsiFree(qi);
 
 	/* T11. Print all dependency loops. */
 	ri = rpmtsiInit(ts);
@@ -2703,7 +2700,7 @@ rescan:
 		rpmteTSI(p)->tsi_queued = 0;
 	    }
 	}
-	ri = rpmtsiFree(ri, msg);
+	ri = rpmtsiFree(ri);
 
 	/* If a relation was eliminated, then continue sorting. */
 	/* XXX TODO: add control bit. */
@@ -2728,7 +2725,7 @@ rescan:
     pi = rpmtsiInit(ts);
     while ((p = rpmtsiNext(pi, 0)) != NULL)
 	rpmteFreeTSI(p);
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
 
     /*
      * The order ends up as installed packages followed by removed packages.
@@ -2742,7 +2739,7 @@ rescan:
 	orderList[j].orIndex = rpmtsiOc(pi);
 	j++;
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
 
     qsort(orderList, numOrderList, sizeof(*orderList), orderListIndexCmp);
 
@@ -2789,7 +2786,6 @@ assert(newOrderCount == ts->orderCount);
 
 int rpmtsCheck(rpmts ts)
 {
-    static const char msg[] = "rpmtsCheck";
     const char * depName = NULL;
     rpmdepFlags depFlags = rpmtsDFlags(ts);
     rpmuint32_t tscolor = rpmtsColor(ts);
@@ -2885,7 +2881,7 @@ int rpmtsCheck(rpmts ts)
 	if (rc && (ourrc = rc) >= terminate)
 	    break;
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
     if (rc && (ourrc = rc) >= terminate)
 	goto exit;
 
@@ -2928,7 +2924,7 @@ int rpmtsCheck(rpmts ts)
 	if (rc && (ourrc = rc) >= terminate)
 	    break;
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
     if (rc && (ourrc = rc) >= terminate)
 	goto exit;
 
@@ -2950,7 +2946,7 @@ int rpmtsCheck(rpmts ts)
 
 exit:
     mi = rpmdbFreeIterator(mi);
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
     depName = _free(depName);
 
     (void) rpmswExit(rpmtsOp(ts, RPMTS_OP_CHECK), 0);
