@@ -959,7 +959,6 @@ rpmRC rpmtsRollback(rpmts rbts, rpmprobFilterFlags ignoreSet, int running, rpmte
 	/*@globals rpmGlobalMacroContext, h_errno, fileSystem, internalState @*/
 	/*@modifies rbts, rpmGlobalMacroContext, fileSystem, internalState @*/
 {
-    static const char msg[] = "rpmtsRollback";
     const char * semfn = NULL;
     rpmRC rc = 0;
     rpmuint32_t arbgoal = rpmtsARBGoal(rbts);
@@ -1004,7 +1003,7 @@ rpmRC rpmtsRollback(rpmts rbts, rpmprobFilterFlags ignoreSet, int running, rpmte
 		break;
 	    }
 	}
-	tsi = rpmtsiFree(tsi, msg);
+	tsi = rpmtsiFree(tsi);
 	if (rc != RPMRC_OK) 
 	    goto cleanup;
     }
@@ -1107,7 +1106,6 @@ static int markLinkedFailed(rpmts ts, rpmte p)
 	/*@globals fileSystem @*/
 	/*@modifies ts, p, fileSystem @*/
 {
-    static const char msg[] = "markLinkedFailed";
     rpmtsi qi; rpmte q;
     int bingo;
 
@@ -1134,7 +1132,7 @@ static int markLinkedFailed(rpmts ts, rpmte p)
 
 	q->linkFailed = p->linkFailed;
     }
-    qi = rpmtsiFree(qi, msg);
+    qi = rpmtsiFree(qi);
 
     return 0;
 }
@@ -1222,7 +1220,7 @@ int rpmtsRun(rpmts ts, rpmps okProbs, rpmprobFilterFlags ignoreSet)
 		dbmode = (O_RDWR|O_CREAT);
 		break;
 	    }
-	    pi = rpmtsiFree(pi, msg);
+	    pi = rpmtsiFree(pi);
 	}
 
 	/* Open database RDWR for installing packages. */
@@ -1311,7 +1309,7 @@ rpmlog(RPMLOG_DEBUG, D_("sanity checking %d elements\n"), rpmtsNElements(ts));
 	totalFileCount += fc;
 
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
     ps = rpmpsFree(ps);
 
     /* The ordering doesn't matter here */
@@ -1326,7 +1324,7 @@ rpmlog(RPMLOG_DEBUG, D_("sanity checking %d elements\n"), rpmtsNElements(ts));
 
 	totalFileCount += fc;
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
 
 
     /* Run pre-transaction scripts, but only if there are no known
@@ -1393,7 +1391,7 @@ assert(psm != NULL);
 		p->h = headerFree(p->h);
 	    }
 	}
-	pi = rpmtsiFree(pi, msg);
+	pi = rpmtsiFree(pi);
     }
 
     /* ===============================================
@@ -1433,7 +1431,7 @@ rpmlog(RPMLOG_DEBUG, D_("computing %d file fingerprints\n"), totalFileCount);
 
 	fi->fps = (fc > 0 ? xmalloc(fc * sizeof(*fi->fps)) : NULL);
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
 
     if (!rpmtsChrootDone(ts)) {
 	const char * rootDir = rpmtsRootDir(ts);
@@ -1484,7 +1482,7 @@ rpmlog(RPMLOG_DEBUG, D_("computing %d file fingerprints\n"), totalFileCount);
 	(void) rpmswExit(rpmtsOp(ts, RPMTS_OP_FINGERPRINT), fc);
 
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
 
     ptr = rpmtsNotify(ts, NULL, RPMCALLBACK_TRANS_START, 6, ts->orderCount);
 
@@ -1567,7 +1565,7 @@ rpmlog(RPMLOG_DEBUG, D_("computing file dispositions\n"));
 		    if (rpmteDBOffset(q) == ro)
 			knownBad = ro;
 		}
-		qi = rpmtsiFree(qi, msg);
+		qi = rpmtsiFree(qi);
 
 		shared->pkgFileNum = i;
 		shared->otherPkg = dbiIndexRecordOffset(matches[i], j);
@@ -1639,7 +1637,7 @@ rpmlog(RPMLOG_DEBUG, D_("computing file dispositions\n"));
 	(void) rpmswExit(rpmtsOp(ts, RPMTS_OP_FINGERPRINT), fc);
     }
 /*@=nullpass@*/
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
     ps = rpmpsFree(ps);
 
     if (rpmtsChrootDone(ts)) {
@@ -1668,7 +1666,7 @@ rpmlog(RPMLOG_DEBUG, D_("computing file dispositions\n"));
 	    continue;
 	fi->fps = _free(fi->fps);
     }
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
 
     fpc = fpCacheFree(fpc);
     ts->ht = htFree(ts->ht);
@@ -1732,7 +1730,7 @@ assert(psm != NULL);
 		/*@switchbreak@*/ break;
 	    }
 	}
-	pi = rpmtsiFree(pi, msg);
+	pi = rpmtsiFree(pi);
 	if (progress)
 	    ptr = rpmtsNotify(ts, NULL, RPMCALLBACK_REPACKAGE_STOP,
 				7, numRemoved);
@@ -1911,7 +1909,7 @@ assert(psm != NULL);
 	}
     }
 /*@=nullpass@*/
-    pi = rpmtsiFree(pi, msg);
+    pi = rpmtsiFree(pi);
 
     if (!(rpmtsFlags(ts) & RPMTRANS_FLAG_NOPOSTTRANS) &&
 	!(rpmtsFlags(ts) & RPMTRANS_FLAG_TEST))
@@ -1985,7 +1983,7 @@ assert(psm != NULL);
 	    }
 /*@=nullpass@*/
 	}
-	pi = rpmtsiFree(pi, msg);
+	pi = rpmtsiFree(pi);
     }
 
     if (!(rpmtsFlags(ts) & RPMTRANS_FLAG_NOCONTEXTS))
